Adding existsBy methods
