# swagger.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   description: 'This is a sample JWT authentication service. You can find out more about JWT at [https://jwt.io/](https://jwt.io/). For this sample, you can use the `admin` or `client` users (password: admin and client respectively) to test the authorization filters. Once you have successfully logged in and obtained the token, you should click on the right top button `Authorize` and introduce it with the prefix "Bearer ".'
-  version: 1.0.3
+  version: 1.0.5
   title: The authenticator for the Waterproofing Data (WPD) Work Packages
   contact:
     email: igsd@warwick.ac.uk
@@ -262,6 +262,66 @@ paths:
         - Authorization:
             - global
         - apiKey: []
+      deprecated: false
+  /users/existsByNickname:
+    post:
+      tags:
+        - users
+      summary: ${UserController.existsByNickname}
+      description: From a nickname, this method returns if there is a nickname in db or not.
+      operationId: existsByNicknameUsingPOST
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: nickname
+          in: query
+          description: nickname of the user
+          required: true
+          type: string
+          allowEmptyValue: false
+          x-example: This is an unique field, and consumers should be aware of it.
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: boolean
+        '400':
+          description: Something went wrong
+      security:
+        - Authorization:
+            - global
+      deprecated: false
+  /users/existsByUsername:
+    post:
+      tags:
+        - users
+      summary: ${UserController.existsByUsername}
+      description: From a username, this method returns if there is a username in db or not.
+      operationId: existsByUsernameUsingPOST
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: username
+          in: query
+          description: username of the user
+          required: true
+          type: string
+          allowEmptyValue: false
+          x-example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: boolean
+        '400':
+          description: Something went wrong
+      security:
+        - Authorization:
+            - global
       deprecated: false
   /users/login:
     post:
@@ -555,7 +615,7 @@ definitions:
         description: terms of usage of the user.
       roles:
         type: array
-        example: i.e. ROLE_CLIENT.
+        example: i.e. [ROLE_CLIENT].
         description: roles of the user.
         items:
           type: string
